# agentic-harness

./: .gitignore  README.md  pyproject.toml  spec.md
agent_harness/: __init__.py
agent_harness/cli/: __init__.py  main.py
agent_harness/core/: __init__.py  artifact_schemas.py  artifacts.py  evaluations.py  harness.py  skills.py  tasks.py  traces.py
agent_harness/dsl/: __init__.py  parser.py  validator.py
agent_harness/evaluation/: __init__.py  deterministic_checks.py  engine.py  llm_judge.py
agent_harness/evaluations/: __init__.py  patch_quality.py  plan_quality.py  repo_map_quality.py  test_pass_rate.py
agent_harness/examples/: coding_agent.harness.yaml
agent_harness/providers/: __init__.py  base_provider.py  openrouter_provider.py  provider_factory.py
agent_harness/rl/: __init__.py  harness_space.py  optimizer.py  reward.py
agent_harness/runtime/: __init__.py  context_builder.py  executor.py  improvement_loop.py  scheduler.py
agent_harness/skills/: __init__.py  analyze_repository.py  common.py  debug_failure.py  generate_plan.py  implement_change.py  verify_behavior.py
agent_harness/store/: __init__.py  artifact_store.py  run_store.py  trace_store.py
tests/: test_artifact_schema_validation.py  test_cli_provider_contract.py  test_end_to_end.py  test_evaluation_engine.py  test_evaluation_mode_selection.py  test_execution_contract.py  test_executor_sampling.py  test_implement_change.py  test_parser.py  test_provider_factory.py  test_rl_optimizer.py  test_run_metadata.py  test_validator_strictness.py  test_verify_behavior.py
(+6 files in other folders)
